--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.12",
+    "@types/node": "^22.13.1",
+    "better-sqlite3": "^11.8.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.1",
     "hono": "^4.6.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
+    "drizzle-kit": "^0.30.4",
+    "tsx": "^4.19.2",
     "wrangler": "^3.83.0"
   }
 }
