--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hono": "^4.6.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@cloudflare/workers-types": "^4.20241022.0",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
