--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
     "generate:migration": "drizzle-kit generate --config=src/models/drizzle.config.ts",
-    "migrate": "drizzle-kit migrate --config=src/models/drizzle.config.ts"
+    "migrate": "drizzle-kit migrate --config=src/models/drizzle.config.ts",
+    "migrate:local": "drizzle-kit migrate --local --config=src/models/drizzle.config.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
@@ -12,13 +13,15 @@
     "@types/node": "^22.13.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
-    "hono": "^4.6.8"
+    "hono": "^4.6.8",
+    "miniflare": "^3.20250129.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@cloudflare/workers-types": "^4.20250204.0",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
-    "wrangler": "^3.83.0"
-  }
+    "wrangler": "^3.107.3"
+  },
+  "type": "module"
 }
