feat: @hono/zod-validatorを依存関係に追加

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "migrate": "drizzle-kit migrate --config=src/infrastructure/db/drizzle.config.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.3",
     "@libsql/client": "^0.14.0",
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.13.1",
