--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "migrate": "drizzle-kit migrate --config=src/infrastructure/db/drizzle.config.ts"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.5.0",
+    "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.4.3",
     "@libsql/client": "^0.14.0",
     "@types/better-sqlite3": "^7.6.12",
