--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     ],
     "types": [
       "@cloudflare/workers-types/2023-07-01",
+      "@cloudflare/vitest-pool-workers",
       "node"
     ],
     "jsx": "react-jsx",
