--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "types": [
       "@cloudflare/workers-types/2023-07-01",
       "@cloudflare/vitest-pool-workers",
+      "vitest/globals",
       "node"
     ],
     "jsx": "react-jsx",
