--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: CI
 
 on:
   pull_request:
@@ -7,12 +7,11 @@ on:
 
 jobs:
   test:
-    name: Run Tests with Vitest
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Bun
         uses: oven-sh/setup-bun@v1
@@ -22,11 +21,12 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Run Lint and Format Check
-        run: bun run biome ci
+      - name: Run tests
+        run: bun run test
 
-      - name: Run TypeScript Type Check
-        run: bun run tsc --noEmit
-
-      - name: Run Vitest
-        run: bun run vitest --run --coverage
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: ./test-results
