--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Setup D1 DB (migrate & seed)
+        run: bunx wrangler d1 execute DB --file ./src/infrastructure/db/seeds/seeds.sql
+
       - name: Run tests
         run: bun run test
