--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,7 @@ compatibility_flags = [ "nodejs_compat" ]
 binding = "DB"
 database_name = "kuhi-database"
 database_id = "d7dbf1b5-274e-49f4-8a75-c689e7d86097"
+migrations_dir = "src/infrastructure/db/migrations"
 
 # [[kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
