--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@cloudflare/workers-types": "^4.20250204.0",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
-    "wrangler": "^3.107.3"
+    "wrangler": "^4.15.2"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
 }
