--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "generate:migration": "drizzle-kit generate --config=src/infrastructure/db/drizzle.config.ts",
     "migrate": "drizzle-kit migrate --config=src/infrastructure/db/drizzle.config.ts",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "format": "biome format --write ."
   },
   "dependencies": {
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@cloudflare/workers-types": "^4.20250204.0",
+    "@vitest/coverage-v8": "2.1.8",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
     "wrangler": "^4.15.2"
