--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,8 +6,8 @@ compatibility_flags = [ "nodejs_compat" ]
 
 [[d1_databases]]
 binding = "DB"
-database_name = "kuhi-database"
-database_id = "d7dbf1b5-274e-49f4-8a75-c689e7d86097"
+database_name = "haiku-monument-db"
+database_id = "c86570ec-9fbb-4658-8e98-956ee306616a"
 migrations_dir = "src/infrastructure/db/migrations"
 
 # [[kv_namespaces]]
