--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "migrate": "drizzle-kit migrate --config=src/infrastructure/db/drizzle.config.ts",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "format": "biome format --write ."
+    "format": "biome format --write .",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.7.1",
+    "@cloudflare/vitest-pool-workers": "^0.8.67",
     "@hono/swagger-ui": "^0.5.0",
     "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.4.3",
     "@libsql/client": "^0.14.0",
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.13.4",
+    "devalue": "^5.3.2",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.44.4",
     "hono": "^4.6.8",
