--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.8.67",
+    "@cloudflare/vitest-pool-workers": "^0.9.3",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.4.3",
     "@libsql/client": "^0.14.0",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^22.18.0",
+    "@types/node": "^22.18.6",
     "devalue": "^5.3.2",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.5",
-    "hono": "^4.9.4",
-    "miniflare": "^3.20250718.1",
-    "vitest": "2.1.9"
+    "hono": "^4.9.8",
+    "miniflare": "^4.20250917.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@cloudflare/workers-types": "^4.20250826.0",
-    "@vitest/coverage-v8": "2.1.8",
-    "drizzle-kit": "^0.30.6",
+    "@cloudflare/workers-types": "^4.20250923.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
-    "wrangler": "^4.33.0"
+    "vitest": "^3.2.4",
+    "wrangler": "^4.38.0"
   },
   "type": "module",
-  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
+  "packageManager": "bun@1.1.33"
 }
